@@ -21,6 +21,8 @@ ABUSE:
 	- rebindable controller buttons, saving and loading of button bindings via config file
 	- navigating the main menu and save/load screens using dpad or left stick
 - fixed level music not being played correctly when level was loaded
+- quick load using F9
+- bullet time
 	
 ABUSE-TOOL:
 - extracting PCX images in SPEC files to modern image formats using OpenCV
